# AI-Pulse-News-Tracker

./: .dockerignore  .env.example  .gitignore  AI_PRODUCT_ROADMAP.md  Dockerfile  README.md  app.py  docker-compose.yml  news_analyzer.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
docs/: AI_PRODUCT_ROADMAP.md
scripts/: check_setup.py
src/ai_pulse_tracker/: __init__.py  agent.py  config.py  dashboard.py  embeddings.py  enrichment.py  models.py  news.py  pipeline.py  relevance.py  retrieval.py  sentiment.py  storage.py  trends.py
test/: test_setup.py
tests/: conftest.py  test_agent.py  test_config.py  test_dashboard_context.py  test_embeddings.py  test_enrichment.py  test_models.py  test_news.py  test_relevance.py  test_retrieval.py  test_trends.py
