[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pulse-tracker"
version = "0.1.0"
description = "NewsAPI ingestion + Azure sentiment dashboard"
readme = "README.md"
authors = [{name = "AI Pulse"}]
requires-python = ">=3.10"
dependencies = [
    "azure-ai-textanalytics",
    "azure-core",
    "azure-cosmos",
    "pandas",
    "plotly",
    "python-dotenv",
    "requests",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
